Fixed header on all html pages (right aligned Sign Out button and [CurrentUser]

--- a/css/main.scss
+++ b/css/main.scss
@@ -45,7 +45,7 @@ nav {
     display: block;
     margin-top: 10px;
     margin-right: 20px;
-    
+    text-align: right;
 }
 
 .main-login {
@@ -66,6 +66,10 @@ footer {
 /* text, buttons, images */
 .txt-green{
     color: #09ed92;
+    font-family: sans-serif;
+}
+.txt-white {
+    color: #eeeeee;
     font-family: sans-serif;
 }
 a {
